<resources>
    <string name="app_name">PlanProPropio</string>
    <string name="Logo">Logo de la app</string>
    <string name="Loading">Loading...</string>
    <string name="planpro">PlanPro</string>
    <string name="usernameocorreo">Username o Correo</string>
    <string name="ingresaruserocorreo">Ingresar username o correo</string>
    <string name="password">Password</string>
    <string name="ingresa_tu_contraseña">Ingresa tu contraseña</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="olvidastetucontraseña">¿olvidaste o perdiste tu contrseña?</string>
    <string name="recuperarcontraseña">RECUPERAR CONTRSEÑA</string>
    <string name="correo">Correo</string>
    <string name="ingresarcorreo">Ingresar correo</string>
    <string name="enviar">Enviar</string>
    <string name="crearusername">Crear Username</string>
    <string name="crearpassword">Crear Password</string>
    <string name="confirmarpassword">Confirmar Password</string>
    <string name="crearcuenta">Crear Cuenta</string>
    <string name="confirma_tu_contraseña">Confirma tu contraseña</string>
    <string name="correoenviadorecuperar">Correo de cambio de contraseña enviado, verifique su bandeja de entrada.</string>
    <string name="habitos">Hábitos</string>
    <string name="MENU">MENU</string>
    <string name="logo_de_modulo_agregar_notas">logo de modulo agregar notas</string>
    <string name="Agregar">Agregar</string>
    <string name="logo_de_modulo_lista_de_notas">logo_de_modulo_lista_de_notas</string>
    <string name="mis_notas">Mis notas</string>
    <string name="logo_de_modulo_retos">logo_de_modulo_retos</string>
    <string name="boton_atras_agregar_notas_home">boton_atras_agregar_notas_Home</string>
    <string name="fecha_de_registrotexto">Fecha de Registro</string>
    <string name="fecha_registro_notas">00/00/0000</string>
    <string name="titulo_agregar_nota">Titulo</string>
    <string name="descripci_n_nota">Descripción</string>
    <string name="resumen_por_ia">resumen por ia</string>
    <string name="fecha_de_finalizaciontexto">00/00/0000</string>
    <string name="guardar_nota">GUARDAR</string>
    <string name="logo_ia_modulo_agregar_notas">logo_IA_modulo_agregar_notas</string>
    <string name="calendario_fecha_finalizacion_nota">calendario_fecha_finalizacion_nota</string>
    <string name="salir">Salir</string>
    <string name="editarusuario">Editar usuario</string>
    <string name="atras">Atras</string>
    <string name="cambiar_imagen">Botón editar foto de perfil</string>
    <string name="predeterminadousuario">Usuario</string>
    <string name="foto_usuario">Foto de perfil</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="celular">Celular</string>
    <string name="guardar">Guardar</string>
    <string name="no_finalizadas_button">no finalizadas</string>
    <string name="finalizadas_button">finalizadas</string>
    <string name="icono_nota">icono nota</string>
    <string name="finalizadotext">finalizado</string>
    <string name="title_listaHabitos">Habitos</string>
    <string name="tittle_crear_habitos">Crear Habitos</string>
    <string name="tittle_titulo">Titulo</string>
    <string name="descripcion_crearhabitos">Descripcion</string>
    <string name="subtitulodatepicker">Configurar fecha de inicio</string>
    <string name="fechatemp_crearhabito">--/--/--</string>
    <string name="boton_crearhabitos">Crear</string>
    <string name="titulotemp_actividad">Actividad</string>
    <string name="textotemp_descripcion_actividad">Texto de descripcion</string>
    <string name="subtitulo_finalizacionactividad">Fecha de finalización</string>
    <string name="boton_completaractividad">completar</string>
    <string name="dom_tcheckbox">Dom</string>
    <string name="lun_tcheckbox">Lun</string>
    <string name="mar_tcheckbox">Mar</string>
    <string name="mie_tcheckbox">Mie</string>
    <string name="jue_tcheckbox">Jue</string>
    <string name="vie_tcheckbox">Vie</string>
    <string name="sab_tcheckbox">Sab</string>
    <string name="botonfloat_crearhabito">Crear habito</string>
    <string name="perfil_usuario">Perfil de usuario</string>
    <string name="cambiar_usuario">Boton cambiar nombre de usuario</string>
    <string name="nuevousuario">Nuevo usuario</string>
    <string name="actividad">Actividad</string>
</resources>