<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFondoApp"
        tools:context=".DetalleHabitosActivity">

        <ImageButton
            android:id="@+id/icon_profile"
            android:contentDescription="@string/perfil_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/usuario_1"
            style="@style/icon_profile_logged"
            android:background="@color/transparente_100p"
            android:layout_height="48dp"
            android:layout_width="48dp"/>

        <ImageButton
            android:id="@+id/logout"
            android:contentDescription="@string/salir"
            app:layout_constraintEnd_toStartOf="@+id/icon_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/salir_1"
            style="@style/icon_logout_logged"
            android:background="@color/transparente_100p"
            android:layout_height="48dp"
            android:layout_width="48dp"/>

        <ImageButton
            android:id="@+id/planpro_icon"
            android:contentDescription="@string/Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bloc_notes_2"
            style="@style/icon_planpro_logged"
            android:background="@color/transparente_100p"
            android:layout_height="48dp"
            android:layout_width="48dp"/>

        <TextView
            android:id="@+id/titulo_logged"
            style="@style/text_titulo_logged"
            android:fontFamily="@font/jsmath_cmti10"
            android:text="@string/planpro"
            app:layout_constraintStart_toEndOf="@+id/planpro_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/botones_tareas"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/icon_atras"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparente_100p"
                    android:contentDescription="@string/atras"
                    app:srcCompat="@drawable/atras_1" />

                <TextView
                    android:id="@+id/titulo_actividades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/karma_medium"
                    android:text="@string/titulotemp_actividad"
                    android:textSize="25sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/descripcion_consultarhabito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/karma_medium"
                android:maxLines="4"
                android:minLines="4"
                android:text="@string/textotemp_descripcion_actividad"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitulocrearhabitos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="280dp"
                android:fontFamily="@font/karma_medium"
                android:text="@string/subtitulo_finalizacionactividad"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/imgcaledario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="350dp"
                android:backgroundTint="@color/transparente_100p"
                android:contentDescription="@string/subtitulodatepicker"
                android:focusable="false"
                app:srcCompat="@drawable/calendario_1" />

            <TextView
                android:id="@+id/fechacrearhabito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="155dp"
                android:layout_marginTop="365dp"
                android:fontFamily="@font/karma_medium"
                android:text="@string/fechatemp_crearhabito"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="470dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/domingo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_weight="0.3"
                        android:text="@string/dom_tcheckbox" />

                    <CheckBox
                        android:id="@+id/lunes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/lun_tcheckbox" />

                    <CheckBox
                        android:id="@+id/martes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/mar_tcheckbox" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/miercoles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:text="@string/mie_tcheckbox" />

                    <CheckBox
                        android:id="@+id/jueves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jue_tcheckbox" />

                    <CheckBox
                        android:id="@+id/viernes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vie_tcheckbox" />

                    <CheckBox
                        android:id="@+id/sabado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sab_tcheckbox" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/crearhabitos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="600dp"
                android:backgroundTint="@color/colorFondoApp"
                android:fontFamily="@font/karma_medium"
                android:text="@string/boton_completaractividad"
                android:textSize="20sp" />

        </FrameLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
