<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F5596"
        android:id="@+id/main"
        tools:context=".AgregarNotasActivity">

        <ImageView
            android:id="@+id/imageViewLogoHome"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bloc_notes_2__1_" />

        <View
            android:id="@+id/viewRectanguloAgregarNotas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/Planpro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jsmath_cmti10"
            android:text="@string/planpro"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/viewRectanguloAgregarNotas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <ImageView
            android:id="@+id/ButtonAtrasHome1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/boton_atras_agregar_notas_home"
            android:src="@drawable/atras_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewRectanguloAgregarNotas"/>

        <TextView
            android:id="@+id/TituloFechaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fecha_de_registrotexto"
            android:textColor="#575757"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ButtonAtrasHome1" />

        <TextView
            android:id="@+id/FechaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fecha_registro_notas"
            android:textSize="25sp"
            android:textColor="#575757"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.359"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloFechaRegistro"/>

        <EditText
            android:id="@+id/TituloNota"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:textColor="#575757"
            android:hint="@string/titulo_agregar_nota"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FechaRegistro" />

        <EditText
            android:id="@+id/DescripcionNota"
            android:layout_width="359dp"
            android:layout_height="199dp"
            android:gravity="top"
            android:textColor="#575757"
            android:hint="@string/descripci_n_nota"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="10"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/viewRectanguloAgregarNotas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloNota" />


        <ImageView
            android:id="@+id/CalendarioAgregarNotas"
            android:layout_width="79dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="104dp"
            android:contentDescription="@string/calendario_fecha_finalizacion_nota"
            android:src="@drawable/calendario_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota"
            app:layout_constraintVertical_bias="0.892" />

        <TextView
            android:id="@+id/FechaFinalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="76dp"
            android:textColor="#575757"
            android:text="@string/fecha_de_finalizaciontexto"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toEndOf="@+id/CalendarioAgregarNotas"
            app:layout_constraintTop_toBottomOf="@+id/DescripcionNota" />

        <Button
            android:id="@+id/buttonAgregarNota"
            android:layout_width="138dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#2F5596"
            android:text="@string/guardar_nota"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/viewRectanguloAgregarNotas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FechaFinalizacion"
            app:layout_constraintVertical_bias="0.458" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>